--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@dataconnect/admin-generated": "link:src/dataconnect-admin-generated",
+    "@dataconnect/generated": "link:src/dataconnect-generated",
     "@genkit-ai/google-genai": "^1.20.0",
     "@genkit-ai/next": "^1.20.0",
     "@hookform/resolvers": "^4.1.3",
@@ -42,8 +44,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-  "firebase": "^11.9.1",
-  "firebase-admin": "^11.11.0",
+    "firebase": "^11.9.1",
+    "firebase-admin": "^11.11.0",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -58,13 +60,13 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.20.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@playwright/test": "^1.40.0"
+    "typescript": "^5"
   }
 }
