Adapting to github codespace

--- a/materialToMD/.gitignore
+++ b/materialToMD/.gitignore
@@ -74,3 +74,22 @@ node_modules/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+.next/
+out/
+build/
+.vercel
+
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+env/
+.venv/
+.pytest_cache/
+.python-version
+
+emulator_data/
+
+.DS_Store
+Thumbs.db
