docs: add codespaces instructions and config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,58 @@
-{"image":"mcr.microsoft.com/devcontainers/universal:2",
-"forwardPorts": [3000, 4000, 8080, 9099, 9199],
-"portsAttributes": {
-    "4000": { "label": "Emulator UI", "visibility": "public" },
-    "9099": { "label": "Auth Emulator", "visibility": "public" },
-    "8080": { "label": "Firestore Emulator", "visibility": "public" },
-    "9199": { "label": "Storage Emulator", "visibility": "public" },
-    "3000": { "label": "Next.js Frontend", "visibility": "public" }
-}
+{
+    "name": "CourseWise Dev Container",
+    "image": "mcr.microsoft.com/devcontainers/universal:2",
+    "features": {
+        "ghcr.io/devcontainers/features/python:1": {
+            "version": "3.12"
+        },
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts"
+        }
+    },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "dbaeumer.vscode-eslint",
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "formulahendry.auto-close-tag",
+                "esbenp.prettier-vscode"
+            ]
+        }
+    },
+    "forwardPorts": [
+        3000,
+        4000,
+        8080,
+        9099,
+        9199,
+        8000
+    ],
+    "portsAttributes": {
+        "4000": {
+            "label": "Emulator UI",
+            "visibility": "public"
+        },
+        "9099": {
+            "label": "Auth Emulator",
+            "visibility": "public"
+        },
+        "8080": {
+            "label": "Firestore Emulator",
+            "visibility": "public"
+        },
+        "9199": {
+            "label": "Storage Emulator",
+            "visibility": "public"
+        },
+        "3000": {
+            "label": "Next.js Frontend",
+            "visibility": "public"
+        },
+        "8000": {
+            "label": "FastAPI Backend",
+            "visibility": "public"
+        }
+    },
+    "postCreateCommand": "npm install -g firebase-tools pnpm && pnpm install && pip install -r services/material-to-md/requirements.txt"
 }
